# ceerat-platform-builder-agent

./: README.md  codepromt.md  pyproject.toml
.ceerat-agent/: ai-tool-standard.md  architecture.md  domain-requirements.json  module-generation-standard.md  platform-overview.html  security-rbac-standard.md  service-standards.md  ui-standard.md
.ceerat-agent/prompts/: planner.md  system.md
ceerat_builder/: __init__.py  config.py  context_loader.py  main.py  models.py  openai_client.py  planner.py
examples/: invoice-request.txt
