[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ceerat-platform-builder-agent"
version = "0.1.0"
description = "Developer CLI agent for planning Ceerat backend service capabilities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1",
  "openai>=1.30",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.scripts]
ceerat-builder = "ceerat_builder.main:app"

[tool.setuptools.packages.find]
include = ["ceerat_builder*"]
